--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.12",
+    "chroma-js": "^2.4.2",
     "next": "14.2.3",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
